--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -101,4 +101,6 @@
   background-color: #9b2990;
 
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
