--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -96,7 +96,6 @@ a {
 
     display: flex;
     align-items: center;
-    justify-content: space-between;
   }
 
   main {
